@@ -96,27 +96,34 @@ pri _sqrt(a) | r, bit, tmp
 con
  _rxpin = 31
  _txpin = 30
- _bitcycles = 80_000_000 / 115_200
 
-pri _tx(c) | val, nextcnt
+dat
+_bitcycles long 80_000_000 / 115_200
+
+pri _tx(c) | val, nextcnt, bitcycles
+  bitcycles := _bitcycles
   OUTA[_txpin] := 1
   DIRA[_txpin] := 1
   val := (c | 256) << 1
   nextcnt := cnt
   repeat 10
-    waitcnt(nextcnt += _bitcycles)
+    waitcnt(nextcnt += bitcycles)
     OUTA[_txpin] := val
     val >>= 1
 
-pri _rx | val, rxmask, waitcycles, i
+pri _rx | val, rxmask, waitcycles, i, bitcycles
+  bitcycles := _bitcycles
   DIRA[_rxpin] := 0
   rxmask := 1<<_rxpin
   waitpeq(0, rxmask)
-  waitcycles := cnt + (_bitcycles>>1)
+  waitcycles := cnt + (bitcycles>>1)
   val := 0
   repeat 8
-    waitcnt(waitcycles += _bitcycles)
+    waitcnt(waitcycles += bitcycles)
     val := (INA[_rxpin] << 7) | (val>>1)
-  waitcnt(waitcycles + _bitcycles)
+  waitcnt(waitcycles + bitcycles)
   _tx(val)
   return val
+
+pri _setbaud(rate)
+  _bitcycles := clkfreq / rate
